# codegen-tools

./: Cargo.toml  justfile
crates/bool-logic/: Cargo.toml
crates/bool-logic/src/: ast.rs  eval.rs  lib.rs  transform.rs  utils.rs  visit_mut.rs
crates/codegen-cfg/: Cargo.toml
crates/codegen-cfg/src/: ast.rs  lib.rs  parsing.rs  transform.rs  vis.rs
crates/codegen-libc/: Cargo.toml
crates/codegen-libc/src/: cfg_transform.rs  lib.rs  main.rs  rules.rs  search.rs  syn.rs  transform.rs
crates/codegen-writer/: Cargo.toml
crates/codegen-writer/src/: lib.rs
crates/libc-cfg/: Cargo.toml
crates/libc-cfg/src/: cfg_transform.rs  lib.rs  main.rs  rules.rs  utils.rs
crates/target-cfg/: Cargo.toml
crates/target-cfg/src/: ast.rs  eval.rs  fmt.rs  lib.rs  utils.rs
src/: lib.rs
