[package]
name = "libc-cfg"
version = "0.1.0-dev"
edition = "2021"
publish = false
rust-version = "1.59.0"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
camino = { version = "1.1.4", features = ["serde1"] }
clap = { version = "4.2.7", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
once_cell = "1.17.1"
regex = "1.8.1"
serde = "1.0.163"
walkdir = "2.3.3"

[dependencies.target-cfg]
path = "../target-cfg"
